tests/ui/rfcs/rfc-2632-const-trait-impl/default-method-body-is-const-same-trait-ck.stderr
error[E0277]: the trait bound `(): ~const Tr` is not satisfied
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:8:12
   |
LL |         ().a()
   |            ^ the trait `~const Tr` is not implemented for `()`
   |
note: the trait `Tr` is implemented for `()`, but that implementation is not `const`
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:8:9
   |
LL |         ().a()
   |         ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
